[package]
name = "rust_image"
version = "0.1.0"
authors = ["Lukas Reitemeyer <lukas@skoni.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
shapefile = "0.2.1"

[dependencies.netcdf]
version = "0.6.0"
features = ["static"]
